[package]
name = "allowance_sign_up"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
chrono = "0.4.9"
firestore = "0.32.2"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
openssl = { version = "0.10.35", features = ["vendored"] }
reqwest = { version = "0.11.8", features = ["json", "rustls-tls"] }
serde = "1.0.147"
serde_json = "1.0.59"
serde_derive = "1.0.147"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
rust_decimal = "1.31.0"
firebase-auth-sdk = "0.1.0"
uuid = {version = "1.4.1", features = ["serde", "v4"]}
